# Portal-Web-Job-Scraper

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
app/: main.py
data/: db.py  normalize.py  scraper.py
